2002-03-30  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-m17n.el (shimbun-m17n-group-path-alist): Add
	an entry of mule@m17n.org.

2002-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-element-body)
	(mew-shimbun-get-id-msgs, mew-shimbun-unseen-check)
	(mew-shimbun-unseen-setup): Use `match-string' instead of
	`mew-match'.
	(top): Define `mew-local-folder-alist' to avoid byte-compile
	warings.
	(mew-shimbun-goto-folder, mew-shimbun-retrieve-article): Support
	Mew 3.0.55 or later.

	* mew-w3m.el (mew-mime-text/html-w3m): Use `match-string' instead
	of `mew-match'.

	* w3m.el (w3m-fontify-anchors): Modify the point for
	'w3m-name-anchor property when its has an empty body.

2002-03-28  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-dump-head-source-command-arguments)[w3mmee]: Don't
	add Accept-Language header option.
	(w3m-cookie-command-arguments)[w3mmee]: Don't add Cookie header option.
	(w3m-request-arguments): New function to generate -request option.
	(w3m-w3m-retrieve)[w3mmee]: Use w3m-request-arguments to make request
	header and body.

2002-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-at-point (ffap)): Strip text props under XEmacs.
	(ffap-url-regexp): Modify the value to make it match to https urls
	for Emacs 19, 20 and XEmacs.

2002-03-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-tab-drag-mouse-function): Fix problem when dragged
	mouse position is outside of the original frame.

	* w3m.el (w3m-version): New variable.
	(toplevel): Detect w3m version.
	(w3m-user-agent): New user option.
	(w3m-add-user-agent): Ditto.
	(w3m-w3m-retrieve): Add User-Agent: field if w3m-add-user-agent is
	non-nil.

	* w3m-e21.el (w3m-tab-drag-mouse-function): New function.
	(w3m-tab-make-keymap): Add mouse-1, mouse-2, drag-mouse-1 and
	drag-mouse-2.

	* w3m-cookie.el (w3m-cookie-set): Fixed docstring.

2002-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>
